move it to a dedicated folder

--- a/htda/howto/template/template.html
+++ b/htda/howto/template/template.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html>DO NOT UPLOAD!
 <html lang="en">
-<link href="../../../core/css/bootstrap.min.css" rel="stylesheet">
-<script src="../../../core/js/google.js"></script>
-<script src="../../../core/js/bootstrap.min.js"></script>
+<link href="../../core/css/bootstrap.min.css" rel="stylesheet">
+<script src="../../core/js/google.js"></script>
+<script src="../../core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
     <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>HTDA: Be essentially invisible</title>
+    <title>HTDA: TEMPLATE</title>
 </head>
 <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -75,7 +75,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a>
                     </li>
-                    <li class="active"><a href="#">How To: Be essentially invisible</a>
+                    <li class="active"><a href="#">How To: TEMPLATE</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -100,7 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="../../../index">StormyJet.com</a>
+                    <li class="bg-danger"><a href="../../index.html">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
@@ -125,30 +125,28 @@
                     <h1>How to:</h1>
 
                     <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" class="subtext">Essentially be invisible</div>
-                    <p style="font-size">according to <a href="http://www.reddit.com/r/funny/comments/2c1qqk/stopping_a_bike_thief/cjb1i9k">reddit</a>
+                    <div id="candy" class="subtext">TEMPLATE</div>
+                    <p style="font-size">according to <a href="insert url here">TEMPLATE</a>
                     </p>
             </div>
         </div>
         <!--end the gray box-->
         <center>
-            <p class="lead">How to be essentially invisible:</p>
+            <p class="lead">How to TEMPLATE:</p>
         </center>
         <br>
         <br>
         <div class="jumbotron">
-            <strong>1:</strong> Get a orange/yellow vest that roadworkers use, its best if you have a dirty one
+            <strong>1:</strong> Words
             <br>
-            <strong>2:</strong> Get a white hard hat
+            <strong>2:</strong> Words
             <br>
-            <strong>Optional:</strong> Get a cell phone case that you can clip to you belt
-            <br>Congratulations! You are now essentially invisible and you can now do pretty much anything you want.
+            <strong>Optional:</strong> Words
             <hr>
             <strong>ALTERNATE METHOD:</strong>
+            <strong>Step 1:</strong> Words
             <br>
-            <strong>1:</strong> Get a clipboard
-            <br>
-            <strong>2:</strong> Put on a annoyed/angry expression
+            <strong>2:</strong> Words
             <br>Congratulations! You're Done!
         </div>
         </center>
@@ -171,12 +169,12 @@
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>
-    window.jQuery || document.write('<script src="../../../core/js/vendor/jquery-1.8.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="../../core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
 <!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
-<script src="../../../core/js/main.js"></script>
+<script src="../../core/js/main.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="../../../core/js/docs.min.js"></script>
+<script src="../../core/js/docs.min.js"></script>
 </body>
 
 </html>
