--- a/htda/howto/template/template.html
+++ b/htda/howto/template/template.html
@@ -102,7 +102,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-primary"><a style="color:white" href="../../index.html">StormyJet.com</a>
+                    <li class="bg-primary"><a style="color:white" href="../../index.html">Main Site</a>
                     </li>
                 </ul>
             </div>
