--- a/real/download/real3.rev7.css
+++ b/real/download/real3.rev7.css
@@ -1,4 +1,4 @@
-/* network.design presents real3 (version 7) custom pls use &real;<sub>&#9916;</sub><sup>7</sup> in your code. or don't, im not the police
+/* network.design presents real3 (version 7) pls use &real;<sup>7</sup> in your code. or don't, im not the police
 
 BuiltWith Bootstrap
 Built with Bootstrap, if you don't use it you will have a tougher time.
@@ -6,8 +6,6 @@ License: Give credit to Bootstrap and to Me please
 */
 
 @import url(http://fonts.googleapis.com/css?family=Poiret+One|Roboto:100);
-
-/* were using Roboto font, size 300 Light */
 
 .headline {
     font-family: 'Roboto', sans-serif;
@@ -89,8 +87,10 @@ License: Give credit to Bootstrap and to Me please
     text-align: center;
 }
 
-li {
-    font-size: 15px;
+.tupperware {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 .left {
@@ -106,17 +106,7 @@ li {
 }
 
 .rockholder {
-    background-image: url(http://stormyjet.com/core/img/mainbg.jpg);
-    min-height: 85px;
-    max-height: 90px;
-}
-
-.actor {
-    color: white;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 100;
-    font-size: 450%;
+    background-image: url(../img/spotlight.jpg);
     min-height: 85px;
     max-height: 90px;
 }
@@ -365,16 +355,25 @@ li {
     }
 }
 
+.code92 {
+    font-family: 'Poiret One', cursive;
+    text-align: center;
+    font-size: 450%;
+    font-size: 450%;
+}
+
+.code92small {
+    font-family: 'Poiret One', cursive;
+    text-align: center;
+    font-size: 150%;
+    border-top: 2px;
+}
+
 .notlink {
     text-decoration: none;
     color: inherit;
     font-size: inherit;
 }
-
-.fancy {
-    font-family: 'Roboto', sans-serif;
-}
-
 
 /* Animations*/
 
@@ -384,26 +383,31 @@ li {
     transform-origin: 50% 50%;
     animation-fill-mode: forwards;
     /*when the spec is finished*/
+    
     -webkit-animation: anims ease 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-fill-mode: forwards;
     /*Chrome 16+, Safari 4+*/
+    
     -moz-animation: anims ease 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
     -moz-animation-fill-mode: forwards;
     /*FF 5+*/
+    
     -o-animation: anims ease 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
     -o-animation-fill-mode: forwards;
     /*Not implemented yet*/
+    
     -ms-animation: anims ease 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
     -ms-animation-fill-mode: forwards;
     /*IE 10+*/
+    
     margin-top: 20px;
 }
 
@@ -461,8 +465,6 @@ li {
         -ms-transform: translate(0px, 0px);
     }
 }
-
-
 /*break*/
 
 .biganim {
@@ -471,21 +473,25 @@ li {
     transform-origin: 50% 50%;
     animation-fill-mode: forwards;
     /*when the spec is finished*/
+    
     -webkit-animation: biganimframes ease 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-fill-mode: forwards;
     /*Chrome 16+, Safari 4+*/
+    
     -moz-animation: biganimframes ease 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
     -moz-animation-fill-mode: forwards;
     /*FF 5+*/
+    
     -o-animation: biganimframes ease 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
     -o-animation-fill-mode: forwards;
     /*Not implemented yet*/
+    
     -ms-animation: biganimframes ease 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
@@ -547,8 +553,6 @@ li {
         -ms-transform: translate(0px, 0px);
     }
 }
-
-
 /*break*/
 
 .anim-up {
@@ -557,21 +561,25 @@ li {
     transform-origin: 50% 50%;
     animation-fill-mode: forwards;
     /*when the spec is finished*/
+    
     -webkit-animation: anim-upframes ease 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-fill-mode: forwards;
     /*Chrome 16+, Safari 4+*/
+    
     -moz-animation: anim-upframes ease 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
     -moz-animation-fill-mode: forwards;
     /*FF 5+*/
+    
     -o-animation: anim-upframes ease 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
     -o-animation-fill-mode: forwards;
     /*Not implemented yet*/
+    
     -ms-animation: anim-upframes ease 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
@@ -633,8 +641,6 @@ li {
         -ms-transform: translate(0px, 0px);
     }
 }
-
-
 /*break*/
 
 .title-anims {
@@ -643,21 +649,25 @@ li {
     transform-origin: 50% 50%;
     animation-fill-mode: forwards;
     /*when the spec is finished*/
+    
     -webkit-animation: anims-titleframes ease 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-fill-mode: forwards;
     /*Chrome 16+, Safari 4+*/
+    
     -moz-animation: anims-titleframes ease 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
     -moz-animation-fill-mode: forwards;
     /*FF 5+*/
+    
     -o-animation: anims-titleframes ease 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
     -o-animation-fill-mode: forwards;
     /*Not implemented yet*/
+    
     -ms-animation: anims-titleframes ease 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
@@ -709,8 +719,6 @@ li {
         -ms-transform: translate(0px, 0px);
     }
 }
-
-
 /*break*/
 
 .biganims {
@@ -719,21 +727,25 @@ li {
     transform-origin: 50% 50%;
     animation-fill-mode: forwards;
     /*when the spec is finished*/
+    
     -webkit-animation: biganimsframes ease 1s;
     -webkit-animation-iteration-count: 1;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-fill-mode: forwards;
     /*Chrome 16+, Safari 4+*/
+    
     -moz-animation: biganimsframes ease 1s;
     -moz-animation-iteration-count: 1;
     -moz-transform-origin: 50% 50%;
     -moz-animation-fill-mode: forwards;
     /*FF 5+*/
+    
     -o-animation: biganimsframes ease 1s;
     -o-animation-iteration-count: 1;
     -o-transform-origin: 50% 50%;
     -o-animation-fill-mode: forwards;
     /*Not implemented yet*/
+    
     -ms-animation: biganimsframes ease 1s;
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%;
@@ -795,6 +807,4 @@ li {
         -ms-transform: translate(0px, 0px);
     }
 }
-
-
 /*break*/
