--- a/core/css/bootstrap.mod.css
+++ b/core/css/bootstrap.mod.css
@@ -1,6 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100:300:400);
-/*@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");*/
-
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -299,8 +296,7 @@ th {
         border: 1px solid #ddd !important
     }
 }
-
-@font-face {
+/*@font-face {
     font-family: 'Glyphicons Halflings';
     src: url('../fonts/glyphicons-halflings-regular.eot');
     src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg')
@@ -1349,7 +1345,7 @@ th {
 
 .glyphicon-menu-up:before {
     content: "\e260"
-}
+}*/
 
 * {
     -webkit-box-sizing: border-box;
@@ -1370,7 +1366,8 @@ html {
 }
 
 body {
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+    
     font-size: 15px;
     line-height: 1.42857143;
     color: #2c3e50;
@@ -1483,7 +1480,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Roboto, sans-serif"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 1.1;
     color: inherit
@@ -1888,7 +1885,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: Menlo, Monaco, Consolas, "Courier New", monospace
+    font-family: Roboto, sans-serifMenlo, Monaco, Consolas, "Courier New", monospace
 }
 
 code {
@@ -6965,7 +6962,7 @@ button.close {
     z-index: 1070;
     display: block;
     visibility: visible;
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Roboto, sans-serif"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     font-weight: normal;
     line-height: 1.4;
@@ -7088,7 +7085,7 @@ button.close {
     display: none;
     max-width: 276px;
     padding: 1px;
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Roboto, sans-serif"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
     font-weight: normal;
     line-height: 1.42857143;
