--- a/core/css/main.css
+++ b/core/css/main.css
@@ -1,6 +1,6 @@
 /* create 3
 this is create3 version 7 specialized 
-create3 7 Sc signia : &#391;<sub>3</sub><sup>7&#9916;</sup> */
+create3 7 Sc signia : create<sub>3</sub><sup>7&#9916;</sup> */
 
 @import url(http://fonts.googleapis.com/css?family=Poiret+One|Roboto:100);
 
